@@ -49,9 +49,9 @@ copyright = u'2012, The Echo Nest'
 # built documents.
 #
 # The short X.Y version.
-version = '7.0.0'
+version = '7.1.0'
 # The full version, including alpha/beta/rc tags.
-release = '7.0.0'
+release = '7.1.0'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
